Fixed pre-wrap class not being extreme enough

--- a/src/vue3gui/style/util.scss
+++ b/src/vue3gui/style/util.scss
@@ -64,6 +64,7 @@
 
 .pre-wrap {
     white-space: pre-wrap;
+    overflow-wrap: anywhere;
 }
 
 .pre-line {
